monitoring/manifests/ingress-alertmanager-main.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-signin: https://login.hubbe.club/oauth2/start?rd=https://$host$request_uri
    nginx.ingress.kubernetes.io/auth-url: https://login.hubbe.club/oauth2/auth
  name: alertmanager-main
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: alertmanager.hubbe.club
    http:
      paths:
      - backend:
          service:
            name: alertmanager-main
            port:
              name: web
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - alertmanager.hubbe.club
